--- a/app-first/public/index.html
+++ b/app-first/public/index.html
@@ -18,7 +18,7 @@
     <title>Micro App First</title>
   </head>
   <body>
-    <main id="firstApp-container"></main>
+    <div id="firstApp-container"></div>
     <script type="text/javascript">
       window.onload = () => {
         window.renderFirstApp('firstApp-container');
